# Kairo

./: CNAME  Cargo.toml  LICENSE  README.md  app.js  index.html  install.ps1  install.sh  kairo.config  package-lock.json  package.json  robots.txt  sitemap.xml  style.css
.github/: FUNDING.yml
.github/workflows/: deploy-website.yml  release.yml  wiki.yml
data/: kairo.db
docs/wiki/: Architecture.md  Commands.md  Getting-Started.md  Home.md  Philosophy.md  Queries.md  Schemas.md
schema/: users.kairo
src/: config.rs  main.rs  ui.rs
src/adapters/: postgres.rs  sqlite.rs
src/core/: adapter.rs  kairo.pest  mod.rs  parser.rs  query.rs  reader.rs  schema.rs
website/: app.js  index.html  style.css
