[package]
name = "kairo"
version = "0.3.1"
edition = "2024"

[[bin]]
name = "kairo"
path = "src/main.rs"

[[bin]]
name = "kairodb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres"] }
